fix the spacing for all the date pickers

--- a/app/components/Input/date-picker.less
+++ b/app/components/Input/date-picker.less
@@ -4,9 +4,9 @@
     cursor: pointer;
   }
 	.link-holder {
-		padding: 15px 10px 0px;
+		padding: 15px 10px;
 		text-align: center;
-		
+
 		a {
 			color: #00afef;
 			cursor: pointer;
